--- a/lab_student_marks_regression.ipynb
+++ b/lab_student_marks_regression.ipynb
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bcd2faa9",
    "metadata": {},
    "outputs": [
@@ -556,8 +556,7 @@
     "\n",
     "y_pred_lin = linreg.predict(X_test)\n",
     "\n",
-    "# RMSE считаем вручную через корень из MSE,\n",
-    "# так как в некоторых версиях sklearn нет параметра squared=False\n",
+    "# RMSE считаем вручную через корень из MSE\n",
     "rmse_lin = np.sqrt(mean_squared_error(y_test, y_pred_lin))\n",
     "r2_lin = r2_score(y_test, y_pred_lin)\n",
     "mape_lin = mean_absolute_percentage_error(y_test, y_pred_lin)\n",
@@ -702,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "45253a89",
    "metadata": {},
    "outputs": [
@@ -721,7 +720,7 @@
     "scaler_pca = StandardScaler()\n",
     "X_scaled = scaler_pca.fit_transform(X)\n",
     "\n",
-    "# PCA с двумя компонентами (так как признаков всего два)\n",
+    "# PCA с двумя компонентами\n",
     "pca = PCA(n_components=2)\n",
     "X_pca = pca.fit_transform(X_scaled)\n",
     "\n",
@@ -731,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "efaf1cc8",
    "metadata": {},
    "outputs": [
@@ -748,7 +747,6 @@
    ],
    "source": [
     "\n",
-    "# Разделение на train/test уже в пространстве главных компонент\n",
     "X_train_p, X_test_p, y_train_p, y_test_p = train_test_split(\n",
     "    X_pca, y, test_size=0.2, random_state=42\n",
     ")\n",
@@ -952,7 +950,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Основные выводы\n",
+    "### Вопросики\n",
     "\n",
     "1. **Качество линейной и гребневой регрессии на исходных признаках**  \n",
     "   Модели демонстрируют высокий коэффициент детерминации (R²) и относительно небольшие значения RMSE и MAPE. Это говорит о хорошей аппроксимирующей способности линейной модели на данном наборе данных.\n",
